removed flex from header to fix nav bar alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,13 @@ body {
 header {
     padding: 0px;
     margin: 0px;
-    display: flex;
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
 }
 
 footer {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     background-color: #666666;
     color: #cccccc;
     text-align: center;
@@ -25,7 +24,7 @@ footer {
 }
 
 #nav {
-    float: right;
+    position: relative;
     margin: 0px 10px;
     padding: 30px 0px 10px 0px;
     /* border: 1px solid black; - lets me see how big the element is */
@@ -34,8 +33,8 @@ footer {
 
 .container {
     position: relative;
-    width: 960px;
-    margin: 0px 25%;
+    max-width: 960px;
+    margin: auto;
 }
 
 #name {
@@ -45,15 +44,23 @@ footer {
     color: #FFFFFF;
     background-color:#4aaaa5;
     /* border: 1px solid black; - lets me see how big the element is*/
-    align-items: stretch;
 }
 /* used for logo */
-h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.logo {
     position: relative;
-    color: #ffffff;
-    font-size: 28px;
-    width: fit-content;
+    left: 0px;
+    
+}
+.navlinks {
+    position: relative;
+    right: 0px;
+    padding: 25px;
+    text-align: right;
+}
+
+nav {
+    position: relative;
+    max-width: 960px;
 }
 
 a:link {
